preexamen html css

--- a/Leng Marca/Ejercicios flexbox/plantillas/formulario/formulario.html
+++ b/Leng Marca/Ejercicios flexbox/plantillas/formulario/formulario.html
@@ -15,7 +15,8 @@
                     <input id="user" name="user" type="text" minlength="5" maxlength="20" placeholder="Ingrese su usuario" required>
                 </div>
                 <div>
-                        
+                    <label id="password">Contraseña:</label>
+                    <input id="password" name="password" type="password" minlength="8" maxlength="20" placeholder="Increse una contraseña" required>
                 </div>
                 <div>
                     
