--- a/Leng Marca/pruebaMiWeb/html/Work.html
+++ b/Leng Marca/pruebaMiWeb/html/Work.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>My Work</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -13,9 +13,9 @@
         <label for="menu-toggle" class="menu-btn">&#9776;</label>
         <nav class="side-menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./aboutMe.html">About me</a></li>
+                <li><a href="./Work.html">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
