--- a/Leng Marca/1_ejercicios_intro_javascript/ej10/ej10.html
+++ b/Leng Marca/1_ejercicios_intro_javascript/ej10/ej10.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script type="text/javascript" src="ej10.js"></script>
+	<script type="text/javascript" src="ej10.js" defer></script>
+
 </head>
 
 <body>
-	
 </body>
 
 </html>
