--- a/Leng Marca/1_ejercicios_intro_javascript/ej11/ej11.html
+++ b/Leng Marca/1_ejercicios_intro_javascript/ej11/ej11.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script type="text/javascript" src="ej11.js"></script>
+	<script type="text/javascript" src="ej11.js" defer></script>
 </head>
 
 <body>
